<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">
    <Button
        android:id="@+id/mainBtn2"
        android:layout_width="@dimen/zeroDP"
        android:layout_height="@dimen/zeroDP"
        android:layout_marginBottom="@dimen/smallDP"
        android:layout_marginEnd="@dimen/mainLargeDp"
        android:layout_marginLeft="@dimen/smallDP"
        android:layout_marginRight="@dimen/mainLargeDp"
        android:layout_marginStart="@dimen/smallDP"
        android:layout_marginTop="@dimen/smallDP"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hipHop"
        android:textSize="@dimen/medium1SP"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mainBtn3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mainPlay"
        app:layout_constraintTop_toBottomOf="@+id/mainHeading" />
    <Button
        android:id="@+id/mainBtn1"
        android:layout_width="@dimen/zeroDP"
        android:layout_height="@dimen/zeroDP"
        android:layout_marginEnd="@dimen/smallDP"
        android:layout_marginLeft="@dimen/mainLargeDp"
        android:layout_marginRight="@dimen/smallDP"
        android:layout_marginStart="@dimen/mainLargeDp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/reggae"
        android:textSize="@dimen/medium1SP"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/mainBtn2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/mainPlay"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/mainHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/smallDP"
        android:layout_marginLeft="@dimen/smallDP"
        android:layout_marginRight="@dimen/smallDP"
        android:layout_marginStart="@dimen/smallDP"
        android:layout_marginTop="@dimen/medium2DP"
        android:text="@string/app_name"
        android:textSize="@dimen/medium3SP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-smallcaps"/>
    <Button
        android:id="@+id/mainBtn3"
        android:layout_width="@dimen/zeroDP"
        android:layout_height="@dimen/zeroDP"
        android:layout_marginEnd="@dimen/smallDP"
        android:layout_marginLeft="@dimen/mainLargeDp"
        android:layout_marginRight="@dimen/smallDP"
        android:layout_marginStart="@dimen/mainLargeDp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/dance"
        android:textSize="@dimen/medium1SP"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/mainBtn4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/mainPlay"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/mainBtn4"
        android:layout_width="@dimen/zeroDP"
        android:layout_height="@dimen/zeroDP"
        android:layout_marginEnd="@dimen/mainLargeDp"
        android:layout_marginLeft="@dimen/smallDP"
        android:layout_marginRight="@dimen/mainLargeDp"
        android:layout_marginStart="@dimen/smallDP"
        android:layout_marginTop="@dimen/smallDP"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/rock"
        android:textSize="@dimen/medium1SP"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mainBtn5"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mainPlay"
        app:layout_constraintTop_toBottomOf="@+id/mainBtn2" />
    <Button
        android:id="@+id/mainBtn5"
        android:layout_width="@dimen/zeroDP"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium2DP"
        android:layout_marginEnd="@dimen/medium3DP"
        android:layout_marginLeft="@dimen/medium3DP"
        android:layout_marginRight="@dimen/medium3DP"
        android:layout_marginStart="@dimen/medium3DP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/myMusic"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="@dimen/medium1SP"
        android:textStyle="bold"/>
    <ImageView
        android:contentDescription="@string/mainPlayImgContentDesc"
        android:id="@+id/mainPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/zeroDP"
        android:layout_marginEnd="@dimen/zeroDP"
        android:layout_marginLeft="@dimen/zeroDP"
        android:layout_marginRight="@dimen/zeroDP"
        android:layout_marginStart="@dimen/zeroDP"
        android:layout_marginTop="@dimen/zeroDP"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/mainBtn5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainHeading"
        app:srcCompat="@drawable/ic_play_circle_outline_black_60dp" />
</android.support.constraint.ConstraintLayout>