<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/playerPicIv"
        android:layout_width="@dimen/zeroDP"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallDP"
        android:layout_marginEnd="@dimen/large1DP"
        android:layout_marginLeft="@dimen/large1DP"
        android:layout_marginRight="@dimen/large1DP"
        android:layout_marginStart="@dimen/large1DP"
        android:layout_marginTop="@dimen/smallDP"
        android:adjustViewBounds="true"
        android:background="@color/colorAccent"
        android:contentDescription="@string/playerSongImgContentDesc"
        android:cropToPadding="true"
        android:padding="@dimen/smallDP"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002" />
    <ImageView
        android:contentDescription="@string/playerBackDesc"
        android:id="@+id/playerBackIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallDP"
        android:layout_marginLeft="@dimen/medium2DP"
        android:layout_marginStart="@dimen/medium2DP"
        android:layout_marginTop="@dimen/smallDP"
        app:layout_constraintBottom_toBottomOf="@+id/playerSongSB"
        app:layout_constraintStart_toStartOf="@+id/playerPicIv"
        app:layout_constraintTop_toBottomOf="@+id/playerPicIv"
        app:layout_constraintVertical_bias="0.65999997"
        app:srcCompat="@android:drawable/ic_media_previous"/>
    <ImageView
        android:contentDescription="@string/playerForDesc"
        android:id="@+id/playerForwardIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallDP"
        android:layout_marginEnd="@dimen/medium2DP"
        android:layout_marginRight="@dimen/medium2DP"
        android:layout_marginTop="@dimen/smallDP"
        app:layout_constraintBottom_toBottomOf="@+id/playerSongSB"
        app:layout_constraintEnd_toEndOf="@+id/playerPicIv"
        app:layout_constraintTop_toBottomOf="@+id/playerPicIv"
        app:layout_constraintVertical_bias="0.65999997"
        app:srcCompat="@android:drawable/ic_media_next"/>
    <TextView
        android:id="@+id/playerSongNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium3DP"
        android:layout_marginEnd="@dimen/medium3DP"
        android:layout_marginLeft="@dimen/medium3DP"
        android:layout_marginRight="@dimen/medium3DP"
        android:layout_marginStart="@dimen/medium3DP"
        android:layout_marginTop="@dimen/smallDP"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/medium2SP"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/playerPicIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266"/>

    <TextView
        android:id="@+id/playerArtistTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallDP"
        android:layout_marginEnd="@dimen/smallDP"
        android:layout_marginLeft="@dimen/smallDP"
        android:layout_marginRight="@dimen/smallDP"
        android:layout_marginStart="@dimen/smallDP"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/medSP"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/playerPicIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerSongNameTV"
        app:layout_constraintVertical_bias="0.100000024"/>

    <SeekBar
        android:id="@+id/playerSongSB"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="@dimen/zeroDP"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium3DP"
        android:layout_marginEnd="@dimen/medium4DP"
        android:layout_marginLeft="@dimen/medium4DP"
        android:layout_marginRight="@dimen/medium4DP"
        android:layout_marginStart="@dimen/medium4DP"
        android:layout_marginTop="@dimen/smallDP"
        android:max="1"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerPicIv"
        app:layout_constraintVertical_bias="0.816" />

    <ImageView
        android:id="@+id/playerSongInfoIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/extraSmallDP"
        android:layout_marginEnd="@dimen/medium2DP"
        android:layout_marginLeft="@dimen/smallDP"
        android:layout_marginRight="@dimen/medium2DP"
        android:layout_marginStart="@dimen/smallDP"
        android:contentDescription="@string/playerInfoDesc"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/playerSongNameTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/playerSongNameTV"
        app:layout_constraintTop_toTopOf="@+id/playerSongNameTV"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <ImageView
        android:id="@+id/playerLikeIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallDP"
        android:layout_marginEnd="@dimen/smallDP"
        android:layout_marginLeft="@dimen/medium2DP"
        android:layout_marginRight="@dimen/smallDP"
        android:layout_marginStart="@dimen/medium2DP"
        android:layout_marginTop="@dimen/listDP"
        android:adjustViewBounds="false"
        android:contentDescription="@string/playerLikeDesc"
        android:cropToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/playerForwardIv"
        app:layout_constraintEnd_toStartOf="@+id/playerForwardIv"
        app:layout_constraintStart_toEndOf="@+id/playerPauseSongIv"
        app:layout_constraintTop_toBottomOf="@+id/playerPicIv"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageView
        android:id="@+id/playerNoLikeIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallDP"
        android:layout_marginEnd="@dimen/medium2DP"
        android:layout_marginLeft="@dimen/smallDP"
        android:layout_marginRight="@dimen/medium2DP"
        android:layout_marginStart="@dimen/smallDP"
        android:layout_marginTop="@dimen/listDP"
        android:contentDescription="@string/playerNoLikeDesc"
        app:layout_constraintBottom_toTopOf="@+id/playerBackIv"
        app:layout_constraintEnd_toStartOf="@+id/playerPauseSongIv"
        app:layout_constraintStart_toEndOf="@+id/playerBackIv"
        app:layout_constraintTop_toBottomOf="@+id/playerPicIv"
        app:srcCompat="@android:drawable/ic_delete" />

    <TextView
        android:id="@+id/playerMusicListTypeTV"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zeroDP"
        android:layout_marginBottom="@dimen/listDP"
        android:layout_marginEnd="@dimen/smallDP"
        android:layout_marginLeft="@dimen/smallDP"
        android:layout_marginRight="@dimen/smallDP"
        android:layout_marginStart="@dimen/smallDP"
        android:layout_marginTop="@dimen/smallDP"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/playerPicIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerArtistTV"
        app:layout_constraintVertical_bias="0.882"/>

    <ImageView
        android:id="@+id/playerPlayPicIv"
        android:layout_width="@dimen/zeroDP"
        android:layout_height="@dimen/zeroDP"
        android:layout_marginBottom="@dimen/smallDP"
        android:layout_marginEnd="@dimen/smallDP"
        android:layout_marginLeft="@dimen/smallDP"
        android:layout_marginRight="@dimen/smallDP"
        android:layout_marginStart="@dimen/smallDP"
        android:layout_marginTop="@dimen/smallDP"
        android:contentDescription="@string/playerSongPlay"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/playerPicIv"
        app:layout_constraintEnd_toEndOf="@+id/playerPicIv"
        app:layout_constraintStart_toStartOf="@+id/playerPicIv"
        app:layout_constraintTop_toTopOf="@+id/playerPicIv"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageView
        android:id="@+id/playerPausePicIv"
        android:layout_width="@dimen/zeroDP"
        android:layout_height="@dimen/zeroDP"
        android:layout_marginBottom="@dimen/smallDP"
        android:layout_marginEnd="@dimen/smallDP"
        android:layout_marginLeft="@dimen/smallDP"
        android:layout_marginRight="@dimen/smallDP"
        android:layout_marginStart="@dimen/smallDP"
        android:layout_marginTop="@dimen/smallDP"
        android:contentDescription="@string/playerSongPause"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/playerPicIv"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/playerPicIv"
        app:layout_constraintStart_toStartOf="@+id/playerPicIv"
        app:layout_constraintTop_toTopOf="@+id/playerPicIv"
        app:srcCompat="@android:drawable/ic_media_pause" />

    <ImageView
        android:id="@+id/playerPlaySongIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallDP"
        android:layout_marginEnd="@dimen/smallDP"
        android:layout_marginLeft="@dimen/smallDP"
        android:layout_marginRight="@dimen/smallDP"
        android:layout_marginStart="@dimen/smallDP"
        android:layout_marginTop="@dimen/smallDP"
        android:contentDescription="@string/playerSongPlayControl"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/playerSongSB"
        app:layout_constraintEnd_toStartOf="@+id/playerForwardIv"
        app:layout_constraintStart_toEndOf="@+id/playerBackIv"
        app:layout_constraintTop_toBottomOf="@+id/playerPicIv"
        app:layout_constraintVertical_bias="0.66999996"
        app:srcCompat="@android:drawable/ic_media_play" />

    <ImageView
        android:id="@+id/playerPauseSongIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallDP"
        android:layout_marginEnd="@dimen/smallDP"
        android:layout_marginLeft="@dimen/smallDP"
        android:layout_marginRight="@dimen/smallDP"
        android:layout_marginStart="@dimen/smallDP"
        android:layout_marginTop="@dimen/smallDP"
        android:contentDescription="@string/playerSongPauseControl"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/playerSongSB"
        app:layout_constraintEnd_toStartOf="@+id/playerForwardIv"
        app:layout_constraintStart_toEndOf="@+id/playerBackIv"
        app:layout_constraintTop_toBottomOf="@+id/playerPicIv"
        app:layout_constraintVertical_bias="0.65999997"
        app:srcCompat="@android:drawable/ic_media_pause" />
</android.support.constraint.ConstraintLayout>